<resources>
    <string name="app_name">iwulh</string>
    <string name="back_text">返回</string>
    <string name="other_text">其他</string>

    <string name="load_status_loading">正在加载中...</string>
    <string name="load_status_no_net">没有网络</string>
    <string name="load_status_fail_refresh">加载失败，点击重新加载</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="load_status_complete">加载完成</string>

    <string name="user_id_text">ID：</string>
    <string name="user_name_text">用户名：</string>
    <string name="user_sex_text">性别：</string>
    <string name="user_login_name_text">账    号：</string>
    <string name="user_age_text">年龄：</string>
    <string name="user_creation_time_text">创建时间：</string>
    <string name="user_updata_time_text">更新时间：</string>

    <string name="scan_qr_code">扫描二维码</string>
    <string name="bar_text_album">相册</string>

    <string name="main_tab_home_string">主页</string>
    <string name="main_tab_message_string">消息</string>
    <string name="main_tab_add_string">添加</string>
    <string name="main_tab_search_string">查找</string>
    <string name="main_tab_setup_string">设置</string>

    <!-- APP提示用语 -->
    <string name="sys_network_error">请检查网络连接是否正常</string>
    <string name="sys_exit_tip">再按一次退出程序</string>

    <string name="User_name_cannot_be_empty">账号不能为空!</string>
    <string name="Password_cannot_be_empty">密码不能为空!</string>

    <string name="personal_center_string">个人中心</string>

    <string name="test_1">测试1</string>
    <string name="test_2">测试2</string>
    <string name="test_3">测试3</string>
    <string name="test_4">测试4</string>

</resources>
